# cygwin

./: .gitignore  project.config
winsup/: Makefile.am  configure.ac
winsup/cygserver/: Makefile.am  cygserver-config
winsup/cygwin/: Makefile.am  autoload.cc  clock.cc  create_posix_thread.cc  cxx.cc  cygheap.cc  cygtls.cc  cygwait.cc  cygwin.din  cygwin.sc.in  dcrt0.cc  devices.cc  devices.h  devices.in  dlfcn.cc  dll_init.cc  dtable.cc  dtable.h  environ.cc  exceptions.cc  fenv.c  fhandler.cc  fhandler.h  fhandler_clipboard.cc  fhandler_console.cc  fhandler_disk_file.cc  fhandler_fifo.cc  fhandler_floppy.cc  fhandler_mqueue.cc  fhandler_pipe.cc  fhandler_raw.cc  fhandler_registry.cc  fhandler_socket_inet.cc  fhandler_socket_local.cc  fhandler_socket_unix.cc  fhandler_tape.cc  fhandler_termios.cc  fhandler_timerfd.cc  fhandler_tty.cc  fhandler_virtual.cc  (+36 more)
winsup/cygwin/DevDocs/: how-to-debug-cygwin.txt
winsup/cygwin/aarch64/: cygwin.din  fastcwd.cc
winsup/cygwin/fhandler/: base.cc  clipboard.cc  console.cc  disk_file.cc  dsp.cc  pipe.cc  proc.cc  process.cc  pty.cc  socket.cc  socket_inet.cc  socket_local.cc  termios.cc
winsup/cygwin/include/: fcntl.h  limits.h  mqueue.h  pthread.h  regex.h  search.h  semaphore.h  uchar.h
winsup/cygwin/math/: acosl.c  (+34 more)
winsup/doc/: Makefile.am  dll.xml  faq-programming.xml  faq-setup.xml  faq-using.xml  path.xml  posix.xml  specialnames.xml  utils.xml
winsup/testsuite/: Makefile.am  cygrun.sh
winsup/utils/: Makefile.am  dumper.cc  gencat.c  kill.cc  locale.cc  newgrp.c  profiler.cc  ssp.c  tzmap-from-unicode.org  tzmap.h
(+304 files in other folders)
